// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $50.12
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly 2`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $450.99
  </p>
</div>
`;
